--- a/step 5/package.json
+++ b/step 5/package.json
@@ -1,7 +1,12 @@
 {
   "name": "devnexus2017",
   "main": "server.js",
-  "scripts": {},
+  "scripts": {
+    "start": "tsc && node server",
+    "tsc": "tsc",
+    "postinstall": "npm --prefix ./public install ./public",
+    "test": "mocha -r ./test.bootstrap.js ./test/**/*.spec.js"
+  },
   "dependencies": {
     "body-parser": "~1.9.3",
     "express": "~4.10.3",
@@ -9,8 +14,16 @@
   },
   "devDependencies": {
     "@types/body-parser": "0.0.33",
+    "@types/chai": "^3.4.35",
     "@types/express": "^4.0.34",
+    "@types/mocha": "^2.2.39",
     "@types/morgan": "^1.7.32",
-    "@types/node": "^6.0.57"
+    "@types/node": "^6.0.57",
+    "@types/sinon": "^1.16.35",
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "sinon": "^1.17.7",
+    "supertest": "^3.0.0",
+    "typescript": "^2.1.6"
   }
 }
