--- a/step 5/tsconfig.json
+++ b/step 5/tsconfig.json
@@ -3,14 +3,22 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": ["es6", "dom"],
+    "lib": ["es2015", "dom"],
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny":true,
     "sourceMap": true,
-    "target": "es2016",
+    "target": "es5",
     "typeRoots": [
-      "./node_modules/@types"
+      "./node_modules/@types",
+      "./public/node_modules/@types"
     ]
-  }
+  },
+  "include": [
+    "**/*.ts"
+  ],
+  "exclude": [
+    "./node_modules",
+    "./public/node_modules"
+  ]
 }
