--- a/step 8/package.json
+++ b/step 8/package.json
@@ -13,6 +13,7 @@
     "inversify": "^3.1.0",
     "load-json-file": "^2.0.0",
     "morgan": "~1.5.0",
+    "reflect-metadata": "^0.1.9",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
